# pawe

./: Cargo.toml  README.md  syntax_example.paw  syntax_example_nocomment.paw
doc/: intro.md
examples/: blank.paw  invalid_utf8.paw  tree.paw
examples/proto-germanic/: primary.new.paw  primary.paw
src/: config.rs  error_handling.rs  evolution.rs  lexer.rs  main.rs  parser.rs  phonemes.rs
src/cli/: arg_parser.rs  mod.rs  output.rs
src/compiler/: errors.rs  mod.rs  tests.rs
src/evolution/: errors.rs  mod.rs  routing.rs
src/parser/: errors.rs  lexer.rs  mod.rs  parser.rs  tests.rs
